# surface

./: .gitignore
arcdemo/: CMakeLists.txt  main.cpp
build-mQtUI-Desktop-Debug/: Makefile
fit1/: .#CMakeLists.txt  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  mQtUI.pro  main.cpp  todo.txt  ui_mainwindow.h
fit1/.cache/clangd/index/: canvas.cpp.19FA3D459993B254.idx  canvas.h.C7C065B10CADCB83.idx  common_defines.h.55432E88A4DB4343.idx  discretefairer.cpp.097674A2D023CDEE.idx  discretefairer.h.669B8061A8BE8724.idx  main.cpp.57FA4237A9B9791A.idx  mainwindow.cpp.5D071F68F9838614.idx  mainwindow.h.686B800253302965.idx
fit1/dependencies/: lsq-plane.cc  lsq-plane.cc~  lsq-plane.hh  lsq-plane.hh~
fit1/mQtUI.app/Contents/: Info.plist
fit1/src/: main.cpp
fit1/src/common/include/: common_defines.h  organize.h  organize.hpp
fit1/src/core/include/: DiscreteFairer.h  curvaturecalculator.h  discretefairer.h
fit1/src/core/src/: .#discretefairer.cpp  curvaturecalculator.cpp  discretefairer.cpp
fit1/src/framework/include/: objectloader.h
fit1/src/framework/src/: objectloader.cpp
fit1/src/visualization/include/: camera.h  canvas.h
fit1/src/visualization/qt/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
fit1/src/visualization/src/: camera.cpp  canvas.cpp
